<resources>
    <string name="app_name">DesignActivity</string>
    <string name="ad">AD</string>
    <string name="ald">All Video Downloader</string>
    <string name="media">Media Downloader</string>
    <string name="mediaClick">All download in one click</string>
    <string name="MySaved">My Saved Downloads</string>
    <string name="MySavedFile">Downloaded video files</string>
    <string name="Trending">Trending Videos</string>
    <string name="TrendingWatch">Watch most trending videos</string>
    <string name="linkToDownloadVideo">Paste link to download video</string>
    <string name="paste_URL_here">Paste URL here...</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="exit_app">Exit from app?</string>
    <string name="rate">Rate Now</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    //mvvm
    <string name="heading">MVVM Architecture Pattern</string>
    <string name="email_hint">Enter your Email ID</string>
    <string name="password_hint">Enter your password</string>
    <string name="button_text">Login</string>

</resources>