<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/all_video_downloader_background"
    tools:context=".fragment.TwitterFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginVertical="@dimen/_10sdp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/linkToDownloadVideo"
            android:textColor="@color/black"
            android:textSize="@dimen/_15ssp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/border_background">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/_10sdp"
                android:fontFamily="@font/montserrat_medium"
                android:hint="@string/paste_URL_here"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp"
                android:background="@null"/>

            <ImageView
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/_10sdp"
                android:src="@drawable/link_download_icon" />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_200sdp"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/gradient_ad">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/ad"
                android:textColor="@color/p"
                android:textSize="@dimen/_15ssp"
                android:textStyle="bold" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_100sdp"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="3">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_85sdp"
                android:layout_weight="1"
                android:src="@drawable/how_to_use_icon" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_85sdp"
                android:layout_weight="1"
                android:src="@drawable/open_twitter" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_85sdp"
                android:layout_weight="1"
                android:src="@drawable/download_media_icon" />


        </LinearLayout>


    </LinearLayout>

</FrameLayout>